2006-05-10  Dave Brolley  <brolley@redhat.com>

	* CGEN.sh.in: Correct usage comment.

2005-12-16  Nathan Sidwell  <nathan@codesourcery.com>

	Second part of ms1 to mt renaming.
	* Makefile.in: Rebuilt.
	* aclocal.m4: Rebuilt.
	* compCGEN.cxx: Adjust.
	* configure: Rebuilt.
	* configure.in: Rebult.

2005-12-12  Nathan Sidwell  <nathan@codesourcery.com>

	* mt: Renamed from ms1 dir.  Update file names as appropriate.

2005-10-28  Dave Brolley  <brolley@redhat.com>

	Contribute the following changes:
	2003-10-07  Dave Brolley  <brolley@redhat.com>

	* tracedis.cxx (cgen_disassemble): Rename isa_mask to isas. Now
	(CGEN_ISA_MASK*).
	* tracedis.h (opcode/cgen-bitset.h): #include it.
	(cgen_disassemble): Rename isa_mask to isas. Now
	(CGEN_ISA_MASK*).
	(cgen_bi_endian_cpu::disassemble): 'isas' now (CGEN_ISA_MASK *).
	* cgen-cpu.h (opcode/cgen-bitset.h): #include it.
	(cgen_bi_endian_cpu::disassemble): 'isas' now (CGEN_ISA_MASK *).
	* compCGEN.cxx (cgen_disassemble): Rename isa_mask to isas. Now
	(CGEN_ISA_MASK*).

2005-08-19  Dave Brolley  <brolley@redhat.com>

	* Contribute the following changes:

	2005-07-13  Dave Brolley  <brolley@redhat.com>

	* cgen-cpu.h (notify_ret): Set last_caller and last_callee.

	2005-05-29  Dave Brolley  <brolley@redhat.com>

	* cgen-cpu.h (branch, done_insn, done_cti_insn, notify_ret): 
	New virtual overrides.
	(was_return): New member of cgen_bi_endian_cpu.

2005-08-19  Dave Brolley  <brolley@redhat.com>

	* cgen-fpu.cxx: New file.
	* cgen-fpu.h: New file.
	* Makefile.am (libcgencpu_la_SOURCES): Add cgen-fpu.cxx.
	* Makefile.in: Regenerated.
	* Contribute the following enhancements to floating point
	support:
	
	2005-06-14  Dave Brolley  <brolley@redhat.com>

	* fp.h (do_round,do_normal_round,do_normal_underflow,do_normal_overflow):
	Now virtual.
	* fp.cxx (do_normal_overflow): Round up to infinity only if
	the result is positive.
	(operator-): Don't apply 'neg' to a nan.
	(neg): Return src if it is a qnan.
